--- a/css/one.css
+++ b/css/one.css
@@ -11630,7 +11630,7 @@ table .change-product-link:hover {
   width: auto;
 }
 body {
-  font-family: 'Exo 2', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 .wrapper-container {
   overflow: visible;
@@ -11664,6 +11664,9 @@ body {
   height: 3rem;
 }
 @media (max-width: 992px) {
+  .categories__show:before {
+    display: none;
+  }
   .categories .parent {
     position: relative;
   }
@@ -11724,4 +11727,7 @@ body {
 }
 .cms-home .header-container + .banner {
   margin: 0;
+}
+.topo-head__container {
+  display: flex;
 }
