--- a/css/theme/components/categories.styl
+++ b/css/theme/components/categories.styl
@@ -1,5 +1,9 @@
 @media (max-width: 992px)
     .categories
+        &__show
+            &:before
+                display: none
+
         .parent
             position: relative
 
