--- a/css/theme/general.styl
+++ b/css/theme/general.styl
@@ -45,7 +45,7 @@ screen-lg = 1200px
  * Estilo base do elementos do Html
  */
 body
-    font-family: 'Exo 2', sans-serif
+    font-family: 'Open Sans', sans-serif
 
 .wrapper-container
     overflow: visible
@@ -97,3 +97,4 @@ body
 @import 'components/categories'
 @import 'components/header'
 @import 'components/banner'
+@import 'components/topo-head'
