--- a/css/vars/dev.styl
+++ b/css/vars/dev.styl
@@ -1,11 +1,11 @@
 color1_font = #FFFFFF
 color1_font_hover = #FFFFFF
-color1_bg = #000000
-color1_bg_hover = #CA213E
+color1_bg = #434343
+color1_bg_hover = #434343
 color2_font = #FFFFFF
 color2_font_hover = #FFFFFF
-color2_bg = #4D4D4D
-color2_bg_hover = #333333
+color2_bg = #3ea5e4
+color2_bg_hover = #1997e4
 color3_font = #FFFFFF
 color3_font_hover = #FFFFFF
 color3_bg = #CCCCCC
