--- a/css/main/base.styl
+++ b/css/main/base.styl
@@ -15,8 +15,6 @@ icon(i)
  * Update:   07/2018
  */
 /* Geral */
-html
-    background: #f9f9f9
 
 input, select, textarea
     border-radius: 3px
@@ -58,7 +56,7 @@ a, button, input, select, textarea, .order-status:after, .order-status .ico, .os
     content: ''
 
 /* Estrutura */
-.wrapper > *:not(:last-child), .header-container > *:not(:last-child), .main-container > *:not(:last-child), .col-main > *:not(:last-child), .sidebar > *:not(:last-child), .footer-container > *:not(:last-child), .footer > *:not(:last-child)
+.wrapper > *:not(:last-child), .header-container > *:not(:last-child), .main-container > *:not(:last-child), .col-main > *:not(:last-child), .sidebar > *:not(:last-child), .footer-container > *:not(:last-child)
     margin-bottom: 1rem
 
 .header, .main-container, .footer
@@ -69,7 +67,6 @@ a, button, input, select, textarea, .order-status:after, .order-status .ico, .os
 /* Tamanho mínimo do conteúdo = ~ Altura da tela - (Cabeçalho + Margens) */
 .main-container
     min-height: calc(100vh - 9.5rem)
-
 
 .col-main
     flex: 1
@@ -418,7 +415,7 @@ svg.img-twitter
 
 .search__input
     flex: 1 1 auto
-    border-radius: 3px 0 0 3px !important
+    border-radius: 3px 0 0 3px
 
 .search__filter
     flex: 0 0 auto
@@ -793,9 +790,8 @@ form.searchautocomplete
     margin: 0 -0.5rem -1rem
 
 .products__item
-    flex: 1 1 250px
+    flex: 1 1 300px
     display: flex
-    min-width: 250px
     margin: 0
     padding: 0 0.5rem 1rem
 
@@ -1460,41 +1456,6 @@ form.searchautocomplete
 .mycart
     position: relative
     z-index: 20
-    height: 2.75rem
-
-.mycart__header a
-    position: relative
-    display: flex
-    align-items: center
-    justify-content: center
-    height: 2.75rem
-    width: 2.75rem
-    box-shadow: inset 0 0 0 1px color1_bg
-    border-radius: 100%
-
-.mycart__header .ico
-    fill: color1_bg
-    width: 1rem
-    height: 1rem
-    max-height: none
-
-.mycart__header .text
-    display: none
-
-.mycart__header .qtd
-    position: absolute
-    top: 0
-    right: -0.25rem
-    width: 1rem
-    height: 1rem
-    border-radius: 100%
-    background: color1_bg_hover
-    color: color1_font_hover
-    line-height: 1rem
-    text-align: center
-    font-size: 0.7rem
-    letter-spacing: -0.1em
-    text-indent: -1.5px
 
 .mycart__content
     max-height: 80vh
@@ -1531,9 +1492,6 @@ form.searchautocomplete
 
 .mycart:hover .mycart__header a
     background: color1_bg
-
-.mycart:hover .mycart__header .ico
-    fill: color1_font
 
 .mycart__list
     max-height: 50vh
@@ -2020,7 +1978,6 @@ body:not(.mobile) .categories .ul--1
 .categories--justify .box--1
     position: absolute
     background: #fff
-    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 1rem 2rem -1rem rgba(0, 0, 0, 0.5)
     padding: 0.5rem
 
 .categories--justify .drop--left .box--1
@@ -2438,10 +2395,7 @@ body:not(.mobile) .categories .ul--1
     width: 2.75rem
     height: 2.75rem
     overflow: hidden
-    color: color1_font
-    background: color1_bg
     border-radius: 3px
-    box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1)
     font-size: 0
     text-indent: -9999px
 
@@ -2477,7 +2431,6 @@ body.ie .owl-prev:before, body.ie .owl-next:before
     left: 100%
 
 .owl-next:before, .owl-page span
-    background: color1_bg
     icon('\f054')
 
 /* Feed RSS */
@@ -2786,26 +2739,6 @@ body.ie .owl-prev:before, body.ie .owl-next:before
 .banner--nojs img.m_img
     display: none
 
-.banner--nojs .banner__wrapper
-    column-count: 3
-    column-gap: 0
-
-.banner--nojs .banner__item
-    display: block
-    page-break-inside: avoid
-    break-inside: avoid-column
-    overflow: hidden
-
-.banner:not(.banner--nojs) img.d_img
-    display: block
-    max-width: none
-    width: auto
-    height: 100%
-    position: absolute
-    top: 50%
-    left: 50%
-    transform: translate(-50%, -50%)
-
 .banner:not(.banner--nojs) img.m_img
     display: none
     width: 100vw
@@ -2841,9 +2774,7 @@ body.ie .owl-prev:before, body.ie .owl-next:before
     background: #fff
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2)
 
-
 .header
-    padding-top: 1rem
     display: flex
     align-items: center
     justify-content: flex-end
@@ -2859,14 +2790,6 @@ body.ie .owl-prev:before, body.ie .owl-next:before
     text-align: right
 
 /* Footer */
-.footer-container
-    background: linear-gradient(color1_bg, color1_bg_hover)
-    padding: 1rem 0
-    margin: 4rem 0 0
-
-.footer
-    color: color1_font
-    font-size: 0.8rem
 
 .footer .newsletter
     background: rgba(0, 0, 0, 0.2)
@@ -9166,38 +9089,6 @@ table .change-product-link:hover
     .products__item
         flex: 1 1 100%
 
-    .products__case
-        display: flex
-        flex-flow: row nowrap
-
-    .product__header
-        padding: 1rem 0 1rem 1rem
-        flex: 0 0 40%
-
-    .product__main
-        display: block
-
-    .product__name
-        font-size: 1rem
-        line-height: 1.2rem
-        height: 2.4rem
-        overflow: hidden
-        word-break: break-word
-        position: relative
-
-    .product__name:after
-        content: ''
-        display: block
-        height: 1.2rem
-        width: 25%
-        background: linear-gradient(90deg, rgba(255, 255, 255, 0), #fff)
-        position: absolute
-        bottom: 0
-        right: 0
-
-    .products .configurable-swatch-list, .products .price-box-avista, .products .price-box-parcelado
-        display: none
-
 /* ------ Menu de Categorias */
 /* ~1528px */
 @media (max-width: 95.5rem)
@@ -9255,7 +9146,6 @@ table .change-product-link:hover
         padding: 0
 
     .categories--mobi .all-li--0
-        box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.1)
         max-width: none
 
     .categories--mobi .all-a--0
@@ -9265,7 +9155,6 @@ table .change-product-link:hover
 
     .categories--mobi .all-ul--1
         font-size: 1rem
-        background: rgba(0, 0, 0, 0.1)
 
     .categories--mobi .all-li--1
         box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.1)
@@ -9409,9 +9298,6 @@ table .change-product-link:hover
 
     .mycart.on .mycart__content
         transform: translateX(0)
-
-    .mycart__header .ico
-        fill: color1_bg !important
 
     .mycart__hide
         display: block
@@ -9561,17 +9447,11 @@ table .change-product-link:hover
     .banner .owl-controls
         display: none !important
 
-    .banner--nojs .banner__wrapper
-        column-count: 2
-
 /* ~568px */
 @media (max-width: 35.5rem)
     .slide__youtube
         padding: 100% 182% 0 0
         height: auto !important
-
-    .banner--nojs .banner__wrapper
-        column-count: 1
 
 /* ------ Modal */
 /* ~992px */
@@ -9648,30 +9528,6 @@ table .change-product-link:hover
         column-count: 1
 
 /* ------ Header */
-/* ~1408px */
-@media (max-width: 88rem)
-    .header
-        padding-left: 1rem
-        padding-right: 1rem
-
-/* ~992px */
-@media (max-width: 62rem)
-    .header-container
-        display: flex
-        align-items: center
-        background: color1_bg
-        margin: 0
-
-    .header
-        flex: 1 1 auto
-
-    .header-container .loginout
-        display: none
-
-    .header-container .mywish__header a, .header-container .mycart__header a, .header-container .myaccount__header a
-        background: color1_font !important
-        box-shadow: none
-
 /* ~768px */
 @media (max-width: 48rem)
     .mywish
@@ -9679,10 +9535,6 @@ table .change-product-link:hover
 
 /* ~568px */
 @media (max-width: 35.5rem)
-    .header
-        padding: 0.125rem 0 0.125rem 1rem
-        margin: 0 !important
-
     .header .search
         flex: 0 0 auto
         margin-left: auto
@@ -9739,10 +9591,10 @@ table .change-product-link:hover
         margin-left: 0
         z-index: 10
 
-    .header .myaccount__header, .header .mycart__header
+    .header .myaccount__header
         padding: 0.375rem
 
-    .header .myaccount__header a, .header .mycart__header a
+    .header .myaccount__header a
         width: 2rem
         height: 2rem
 
