--- a/css/theme/pages/cart.styl
+++ b/css/theme/pages/cart.styl
@@ -2,6 +2,12 @@
     .page-title, .breadcrumb
         display: none
 
+.cart
+    &__description
+        font-size: 13px
+        color: #959595
+        padding: 20px 0
+
 .qty-wrapper
     input
         box-shadow: none
