--- a/css/one.css
+++ b/css/one.css
@@ -12568,7 +12568,7 @@ body {
   border-bottom: solid 1px #ebebeb;
 }
 .sharing-links {
-  display: flex;
+  display: none;
   justify-content: flex-end;
 }
 @media (min-width: 993px) {
@@ -12813,6 +12813,9 @@ body {
   display: inline-block;
 }
 @media (min-width: 993px) {
+  .sharing-links {
+    display: flex;
+  }
   .more-views {
     border: 0;
   }
@@ -12822,6 +12825,11 @@ body {
   }
   .prod__shop {
     flex: 0 1 380px;
+  }
+}
+@media (max-width: 992px) {
+  .product-image-container .more-views {
+    display: none;
   }
 }
 .checkout-cart-index .page-title,
